--- a/package.json
+++ b/package.json
@@ -40,6 +40,17 @@
     "postcss-cli": "^8.3.1",
     "remove-files-webpack-plugin": "^1.4.4",
     "snowpack": "^3.3.7",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-watch": "^7.0.0",
+    "prettier": "^2.3.0"
   }
 }
